Update on Overleaf.

--- a/refs.bib
+++ b/refs.bib
@@ -9769,7 +9769,6 @@
     year = {2014},
     booktitle = {PLDI},
     author = {Le, V. and Afshari, M. and Su, Z.},
-    url = {http://dl.acm.org.globalproxy.cvt.dk/citation.cfm?id=2594291.2594334},
     isbn = {9781450327848},
     doi = {10.1145/2594291.2594334},
     issn = {03621340},
@@ -11688,19 +11687,6 @@
     keywords = {all or part of, automatic test generation, grammars, is granted without fee, or hard copies of, permission to make digital, personal or classroom use, program verification, provided that copies are, software testing, this work for}
 }
 
-@article{Le2013,
-    title = {{Compiler validation via equivalence modulo inputs}},
-    year = {2013},
-    journal = {Proceedings of the 35th ACM SIGPLAN Conference on Programming Language Design and Implementation - PLDI '14},
-    author = {Le, Vu and Afshari, Mehrdad and Su, Zhendong},
-    pages = {216--226},
-    url = {http://dl.acm.org.globalproxy.cvt.dk/citation.cfm?id=2594291.2594334},
-    isbn = {9781450327848},
-    doi = {10.1145/2594291.2594334},
-    issn = {03621340},
-    keywords = {automated testing, compiler testing, equivalent program variants, miscompilation}
-}
-
 @article{Chen2017,
     title = {{Learning to Prioritize Test Programs for Compiler Testing}},
     year = {2017},
@@ -11814,6 +11800,11 @@
     isbn = {978-1-5386-3868-2},
     doi = {10.1109/ICSE.2017.54},
     keywords = {-static analysis, machine learning, unsoundness}
+}
+
+@article{Problem,
+    title = {{The Science of Brute Force}},
+    author = {Problem, Pythagorean Triples}
 }
 
 @article{McnallyFuzzingArt,
