--- a/sec/conclusion.tex
+++ b/sec/conclusion.tex
@@ -1,7 +1,3 @@
 \section{Conclusions}\label{sec:conclusion}
 
-We extend the state-of-the-art in a number of areas. First, we present a generative model for programming languages which [is in some way more capable than prior];
-%
-our method achieves X-fold increase in production efficiency compared to syntactic generative models (if grammar based approach);
-%
-and we generate more human-like test-cases for compilers than prior, in (some/most) cases eradicating the need for test-case reduction.
+\ldots
