--- a/sec/vs_clsmith.tex
+++ b/sec/vs_clsmith.tex
@@ -10,11 +10,11 @@ Both testing frameworks were used for 48 hours each. CLSmith was configured with
 %
 %Each OpenCL configuration from Table~\ref{tab:platforms} was configured to run DeepSmith and CLSmith test-cases for 48 hours. This includes the time taken to generate and execute the test-case. All experimental platforms were otherwise unloaded.
 
-\subsection{Test Outcomes}
+\subsection{Results Overview}
 
 Table~\ref{tab:outcomes} shows the outcomes of 48 hours of consecutive testing for each of the platforms from Table~\ref{tab:platforms}. We repeated the experiment twice, once with compiler optimizations disabled ($-$) for all configurations, and once with optimizations enabled ($+$).
 
-XX\% of CLSmith test-cases fails to produce an output (non-\cmark). Proportionally, DeepSmith test-cases are less likely to produce an output, with XX\%
+83.8\% of CLSmith test-cases produce a majority \textbf{\cmark} outcome. Proportionally, DeepSmith test-cases are less likely to produce a majority outcome at 47.9\% of the total.
 
 An average of XX CLSmith and XX DeepSmith test-cases were evaluated on each device, with an average time per test-case of XX and XX respectively. The XX-fold increase in testing throughput achieved by DeepSmith is a result of XXX. Figure~\ref{fig:runtimes} shows runtimes. For DeepSmith, generation time scales linearly with program size (benchmarked at 465 cps). We also include test harness overhead, though this could be implemented away. Disabling optimizaitons generally does not affect testing throughput significantly, with the exception of Config XX, in which the slow compilation of kernels containing structs greatly reduces the number of test-cases evaluated. This is a known issue --- in XX the authors omnit testing on this configuration for this reason.
 
@@ -157,7 +157,7 @@ CLSmith is biased towards identifying struct miscompilations, though only 7.1\% 
     \noindent\mbox{\parbox{\columnwidth}{\usebox{\IntelScalarAssertion}}}%
     \label{lst:intel-scalar-assertion}
   }\\%
-  \caption{Example kernels which crash compilers.}%
+  \caption{Kernels which trigger compiler assertions which both CLSmith and DeepSmith exposed.}%
   \label{lst:compiler-crashes}%
 \end{figure}
 
@@ -211,11 +211,11 @@ DeepSmith also triggered \emph{unreachable!} compiler errors in 180 distinct tes
 \end{figure}
 
 
-\begin{figure}
-	\centering %
-	\includegraphics[width=\columnwidth]{build/img/total-tests}%
-	\caption{%
-		Test-cases. \cc{TODO: Replot with the fastest and slowest device for each}%
-	}%
-	\label{fig:total-tests} %
-\end{figure}
+%\begin{figure}
+%	\centering %
+%	\includegraphics[width=\columnwidth]{build/img/total-tests}%
+%	\caption{%
+%		Test-cases. \cc{TODO: Replot with the fastest and slowest device for each}%
+%	}%
+%	\label{fig:total-tests} %
+%\end{figure}
