--- a/sec/deepsmith.tex
+++ b/sec/deepsmith.tex
@@ -97,7 +97,7 @@ Only 2.3\% of CLSmith programs with anomalous outputs are insensitive to optimiz
 
 \subsection{Discussions}
 
-\paragraph{Undefined Behaviors} OpenCL doesn't have CompCert and UBSan. GPUverify and Oclgrind can catch some errors, so as we have shown in Section~\ref{sec:motivation}, no tool is perfect. Compiler errors are useful. There is much work to be done. We demand that the behavior of test-cases is \emph{portable} and \emph{reproducible}. In some respects this simplifies the execution process.
+\paragraph{Undefined Behaviors} OpenCL doesn't have CompCert and UBSan. GPUverify~\cite{Betts2012} and Oclgrind can catch some errors, so as we have shown in Section~\ref{sec:motivation}, no tool is perfect. Compiler errors are useful. There is much work to be done. We demand that the behavior of test-cases is \emph{portable} and \emph{reproducible}. In some respects this simplifies the execution process.
 
 
 \paragraph{Floating Points} The OpenCL 1.2 specification permits acceptable error bounds (ULP) for floating point operations and builtin functions. Some operations like addition, subtraction, and multiplication are precise; divide permits a small error, and builtins vary widely. Thus two implementation may give different answers that both fit within the allowed ranges (and because errors propagate through operations it's hard to even describe the ULP on the final output). \texttt{half\_} functions permit large error bounds. \texttt{native\_} functions have ``implementation defined'' error bounds. TODO: Denormal numbers may optionally be pushed to zero.
