--- a/sec/motivation.tex
+++ b/sec/motivation.tex
@@ -64,17 +64,20 @@
 
 We motivate the case for compiler fuzzing through deep learning using three example of bugs found using DeepSmith which cannot be generated using existing techniques.
 
-An error in the optimizer of two of the compilers we tested
+A common pattern in OpenCL is to obtain the thread identity, usually as an \texttt{int}, and to compare this against some fixed value to determine whether or not to complete a unit of work. DeepSmith, having modeled the frequency with which this pattern occurs in real handwritten code, will generate many permutations of this pattern. And in doing so, exposed an error in the optimizer of two of the compilers we tested
 % Configs.\ $4+$, $6+$
-causes the \texttt{if} statement of Figure~\ref{lst:intel-size_t-int-reduced} to be executed when the kernel is compiled with optimizations enabled.
+which causes the \texttt{if} statement of Figure~\ref{lst:intel-size_t-int-reduced} to be executed when the kernel is compiled with optimizations enabled.
+%
 % cd ~/data/kernels/github-pp
 % ls | xargs egrep -l 'int [A-Z]+ = get_global_id\(' -- | wc -l
 % >> 2144
 % ls | wc -l
 % >> 4655
-This is troubling --- 46\% of kernels on GitHub use this ($tid \rightarrow$ int, \texttt{if}) pattern to guard against invalid memory accesses.
+This is troubling --- 46\% of kernels on GitHub use this ($tid \rightarrow$ int, \texttt{if}) pattern to guard against invalid memory accesses. CLSmith prevents thread identity from influencing control flow in order to prevent barrier divergence.
 
 
 \cc{TODO} Figure~\ref{lst:oclgrind-race-switch}. CLSmith does not support conditional control flow based on thread ID.
 
-\cc{TODO} Figure~\ref{lst:almost-everything-crash}. The behavior of compilers under invalid inputs is --- to the best of our knowledge --- a much lesser explored topic. While it is hard to quantify what constitutes a ``plausible'' error in code, we believe that our approach contributes a significant improvement for generating human-like code over current random-enumeration approaches. \cc{Maybe work on fuzzing JITs?}
+Figure~\ref{lst:almost-everything-crash} demonstrates a bug of a different kind. 
+
+The behavior of compilers under invalid inputs is --- to the best of our knowledge --- a much lesser explored topic. While it is hard to quantify what constitutes a ``plausible'' error in code, we believe that our approach contributes a significant improvement for generating human-like code over current random-enumeration approaches. \cc{Maybe work on fuzzing JITs?}
